--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,13 @@ jobs:
         - pip install -r requirements.txt
         - pyinstaller --onefile main_flask.py
         - ls -lrt dist
-        - cp dist/main_flask .
-        - chmod +x main_flask
+        - cp dist/main_flask main_linux
+        - chmod +x main_linux
         - sudo chown -R travis:travis inputs
         - ls -lrt
       script:
-        - ./main_flask > /dev/null 2>&1 &
-#        - ./main_flask &
+        - ./main_linux > /dev/null 2>&1 &
+#        - ./main_linux &
 #        - chmod +x ngrok.sh
 #        - ./ngrok.sh 8080 $NGROK_TOKEN
 #        - sleep 3600
@@ -78,16 +78,16 @@ jobs:
         - pip install -r requirements.txt
         - pyinstaller --onefile main_flask.py
         - ls -lrt dist
-        - cp dist/main_flask .
-        - chmod +x main_flask
+        - cp dist/main_flask main_linux
+        - chmod +x main_linux
         - sudo chown -R travis:travis inputs
         - ls -lrt
         - curl -Lo kind https://github.com/kubernetes-sigs/kind/releases/download/v0.6.1/kind-linux-amd64 && chmod +x kind && sudo mv kind /usr/local/bin/
         - kind create cluster
         - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl && chmod +x kubectl && sudo mv kubectl /usr/local/bin/
       script:
-        - ./main_flask > /dev/null 2>&1 &
-#        - ./main_flask &
+        - ./main_linux > /dev/null 2>&1 &
+#        - ./main_linux &
 #        - chmod +x ngrok.sh
 #        - ./ngrok.sh 8080 $NGROK_TOKEN
 #        - sleep 3600
@@ -331,12 +331,12 @@ jobs:
         - pip install -r requirements.txt
         - pyinstaller --onefile main_flask.py
         - ls -lrt dist
-        - cp dist/main_flask .
+        - cp dist/main_flask main_linux
         - ls -lrt
       deploy:
         provider: releases
         api_key: $GITHUB_TOKEN
-        file: "main_flask"
+        file: "main_linux"
         skip_cleanup: true
         on:
           tags: true
