--- a/inputs/templates/alpinetestrunner.yml
+++ b/inputs/templates/alpinetestrunner.yml
@@ -10,7 +10,7 @@ services:
     image: dinutac/estuary-testrunner:latest
     hostname: testrunner
     #    entrypoint: tail -f /etc/alpine-release
-    #    entrypoint: bash -c "/home/dev/scripts/wait-for-it.sh -t 20 eureka-server:8080 -- echo \"eureka running\" && sleep 10 && python3 /home/dev/scripts/main_flask.py"
+    #    entrypoint: bash -c "/scripts/wait-for-it.sh -t 20 eureka-server:8080 -- echo \"eureka running\" && sleep 10 && python3 /scripts/main_flask.py"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       #      EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
@@ -20,7 +20,7 @@ services:
         source: sharedcontent
         target: /testrunnersources
 #      - ./inputs/variables:/variables
-    #      - ./:/home/dev/scripts/
+    #      - ./:/scripts/
     #      - ./tmp:/tmp
     #    ports:
     #      - "8080:8080"
